--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,12 @@ dependencies {
 
 }
 
-cucumberReports {
-  outputDir = file('build/reports/cucumber')
-  buildId = '0'
-  reports = files('build/reports/cucumber/example-report.json')
-}
 
+cucumberReports {
+  outputDir = file('build/reports/cucumber.')
+  buildId = '0'
+  reports = files('reports/example-report.json')
+}
 
 test {
   finalizedBy "jacocoTestReport" ,"sonar" // report is always generated after tests run
