--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ plugins {
   //id "org.sonarqube" version "4.3.1.3277" // Compatible with Java 11
   id "org.sonarqube" version "2.7"
   id 'maven-publish'
-  id("io.github.oleksiiparf.slack-webhook") version "1.0.0"
-  id("de.zebrajaeger.sendMail") version "0.2.2"
+  //id("io.github.oleksiiparf.slack-webhook") version "1.0.0"
+  //id("de.zebrajaeger.sendMail") version "0.2.2"
 }
 
 group 'com.example'
@@ -76,7 +76,7 @@ publishing {
     }
   }
 }
-slack {
+/*slack {
   publishedPlugin {
     webHook = "https://hooks.slack.com/services/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"
 
@@ -131,7 +131,7 @@ publish {
 
 
 
-sendMail {
+/*sendMail {
   smtpServer {
     host "smtp.gmail.com"
     port 587
@@ -146,7 +146,7 @@ sendMail {
             layout.projectDirectory.file("settings.gradle")
     body "Bonjour,Le déploiement a été effectué avec succès. Vous trouverez les fichiers associés en pièce jointe.Cordialement."
   }
-}
+}*/
 
 
 
