--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,7 @@ plugins {
   id("com.github.spacialcircumstances.gradle-cucumber-reporting") version "0.1.25"
   id("org.sonarqube") version "3.5.0.2730"
   id 'maven-publish'
-  //id("io.github.oleksiiparf.slack-webhook") version "1.0.0"
-  //id("de.zebrajaeger.sendMail") version "0.2.2"
+
 }
 
 group 'com.example'
@@ -30,9 +29,6 @@ cucumberReports {
   reports = files('reports/example-report.json')
 }
 
-test {
-  finalizedBy "jacocoTestReport" ,"sonar" // report is always generated after tests run
-}
 
 publishing {
 
@@ -59,7 +55,7 @@ publishing {
       html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
     }
   }
-  sonarqube {
+  sonar {
     properties {
       property "sonar.host.url", "http://197.140.142.82:9000/"
       property "sonar.login", "71871ef5906de87f59e804800bdfcc34cfb334dc"
@@ -69,88 +65,15 @@ publishing {
   }
 
 
+  tasks.test {
+    finalizedBy jacocoTestReport
+  }
+  project.tasks["sonar"].dependsOn "jacocoTestReport"
+
+
   publications {
     maven(MavenPublication) {
       from components.java
     }
   }
 }
-/*slack {
-  publishedPlugin {
-    webHook = "https://hooks.slack.com/services/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"
-
-    attachment {
-      fallback = "New version successfully published."
-      pretext = "New version successfully published."
-      color = "good"
-      field {
-        title = "Module"
-        value = project.name
-        shortValue = true
-      }
-      field {
-        title = "Version"
-        value = project.version
-        shortValue = true
-      }
-    }
-    attachment {
-      fallback = "Another line on sent together."
-      pretext = "Another line on sent together."
-      color = "good"
-      field {
-        title = "Something"
-        value = "Something text"
-      }
-    }
-  }
-  builtSucceed {
-    webHook = "https://hooks.slack.com/services/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"
-
-    attachment {
-      fallback = "Project successfully built."
-      pretext = "Project successfully built."
-      field {
-        title = "Module"
-        value = project.name
-        shortValue = true
-      }
-      field {
-        title = "Version"
-        value = project.version
-        shortValue = true
-      }
-    }
-  }
-}
-
-publish {
-  finalizedBy postBuiltSucceedToSlack
-}
-
-
-
-/*sendMail {
-  smtpServer {
-    host "smtp.gmail.com"
-    port 587
-    user "lr_belgacem@esi.dz"
-    password "ewzo mehw wmll kjvw"
-  }
-  mail {
-    from "lr_belgacem@esi.dz"
-    to "lr_belgacem@esi.dz" //
-    subject "Notification de déploiement"
-    attachments layout.projectDirectory.file("build.gradle"),
-            layout.projectDirectory.file("settings.gradle")
-    body "Bonjour,Le déploiement a été effectué avec succès. Vous trouverez les fichiers associés en pièce jointe.Cordialement."
-  }
-}*/
-
-
-
-
-
-/**test {
- useJUnitPlatform()
- }**/
