--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,8 @@ plugins {
   id 'jacoco'
   id 'java'
   id("com.github.spacialcircumstances.gradle-cucumber-reporting") version "0.1.25"
-  id("org.sonarqube") version "3.5.0.2730"
+  id("org.sonarqube") version "4.4.0.3356"
   id 'maven-publish'
-
 }
 
 group 'com.example'
@@ -23,12 +22,16 @@ dependencies {
 }
 
 
+
 cucumberReports {
   outputDir = file('build/reports/cucumber.')
   buildId = '0'
   reports = files('reports/example-report.json')
 }
 
+test {
+  finalizedBy "jacocoTestReport" ,"sonar" // report is always generated after tests run
+}
 
 publishing {
 
@@ -42,38 +45,88 @@ publishing {
     }
   }
 
-  jacoco {
-    toolVersion = "0.8.12"
-    reportsDirectory = layout.buildDirectory.dir("reports/jacoco")
-  }
-
-  jacocoTestReport {
-    dependsOn test
-    reports {
-      xml.required = true
-      csv.required = false
-      html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
-    }
-  }
-  sonar {
-    properties {
-      property "sonar.host.url", "http://197.140.142.82:9000/"
-      property "sonar.login", "71871ef5906de87f59e804800bdfcc34cfb334dc"
-      property "sonar.sources", "src/main/java"
-      property "sonar.java.coveragePlugin", "jacoco"
-    }
-  }
-
-
-  tasks.test {
-    finalizedBy jacocoTestReport
-  }
-  project.tasks["sonar"].dependsOn "jacocoTestReport"
-
-
   publications {
     maven(MavenPublication) {
       from components.java
     }
   }
 }
+/*slack {
+  publishedPlugin {
+    webHook = "https://hooks.slack.com/services/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"
+
+    attachment {
+      fallback = "New version successfully published."
+      pretext = "New version successfully published."
+      color = "good"
+      field {
+        title = "Module"
+        value = project.name
+        shortValue = true
+      }
+      field {
+        title = "Version"
+        value = project.version
+        shortValue = true
+      }
+    }
+    attachment {
+      fallback = "Another line on sent together."
+      pretext = "Another line on sent together."
+      color = "good"
+      field {
+        title = "Something"
+        value = "Something text"
+      }
+    }
+  }
+  builtSucceed {
+    webHook = "https://hooks.slack.com/services/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"
+
+    attachment {
+      fallback = "Project successfully built."
+      pretext = "Project successfully built."
+      field {
+        title = "Module"
+        value = project.name
+        shortValue = true
+      }
+      field {
+        title = "Version"
+        value = project.version
+        shortValue = true
+      }
+    }
+  }
+}
+
+publish {
+  finalizedBy postBuiltSucceedToSlack
+}
+
+
+
+sendMail {
+  smtpServer {
+    host "smtp.gmail.com"
+    port 587
+    user "lr_belgacem@esi.dz"
+    password "ewzo mehw wmll kjvw"
+  }
+  mail {
+    from "lr_belgacem@esi.dz"
+    to "lr_belgacem@esi.dz" //
+    subject "Notification de déploiement"
+    attachments layout.projectDirectory.file("build.gradle"),
+            layout.projectDirectory.file("settings.gradle")
+    body "Bonjour,Le déploiement a été effectué avec succès. Vous trouverez les fichiers associés en pièce jointe.Cordialement."
+  }
+}
+
+
+
+
+
+/**test {
+ useJUnitPlatform()
+ }**/
